TestSuite/Verification/Error/Parallel/Correctness/Between-Multiple-Devices/Mapping-Defect/ChangedAccessScheme.par
ChangedAccessScheme{

map increment([Int] input): [Int] res{
    res[INDEX] = input[INDEX] + 1
}

map increment2([Int] input): [Int] res{
    res[2 * INDEX] = input[2 * INDEX] + 1
}

seq main() : Int {
    var [Int] initial = init_List([200],1)
    var [Int] intermediate = init_List([200],0)
    var [Int] result = init_List([200],0)
    var [Int] result_seq = init_List([200],0)
    
    /*execute the pattern on node 0 device 0 */
    intermediate = increment<<<[0,0,0]>>>(initial)
    
    result = increment2<<<[0,0,0]>>>(intermediate)
    
    
    for var Int i = 0; i < 200; i++ {
        result_seq[i] = 0
        if i mod 2 == 0 {
            result_seq[i] = 3
        } 
        if result_seq[i] != result[i] {
            print("value at element " {i} " is wrong!")
            exit(1)
        }
    }
    
return 0 
}}
